# mars_server

./: .gitignore  Cargo.toml  README.md  diesel.toml
common/: Cargo.toml
common/src/: models.rs  schema.rs
datasets/: README.md
init/: .gitignore  Cargo.toml
init/migrations/create_tiles/: up.sql
init/src/: main.rs
migrations/create_tiles/: down.sql
server/: Cargo.toml
server/src/: main.rs
