[package]
name = "init"
version = "0.1.0"
authors = ["KSaunders98 <kirksaunders12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
gdal = "0.6.0"
rayon = "1.5.0"
num_cpus = "1.4.0"
common = { path = "../common" }