[package]
name = "server"
version = "0.1.0"
authors = ["KSaunders98 <kirksaunders12@gmail.com>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3.5"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
url = "2.2.0"
common = { path = "../common" }